# dseq

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  configure.ac
lib/: Makefile.am  configmake.h  inttypes.h  parse-datetime.c  ref-add.sed  ref-del.sed  stdlib.h  string.h  time.h  unistd.h  wchar.h
man/: Makefile.am
po/: ChangeLog  Makevars
src/: Makefile  Makefile.am  dseq.c
tests/: badargs  i18nl10n  onearg  threearg  twoarg
